--- a/scripts/Project.toml
+++ b/scripts/Project.toml
@@ -1,3 +1,10 @@
+[compat]
+BenchmarkTools = "1.2"
+CUDA = "4"
+Comonicon = "1"
+MKL = "0.6"
+OMEinsum = "0.7"
+
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
@@ -7,10 +14,5 @@ MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
 OMEinsum = "ebe7aa44-baf0-506c-a96f-8464559b3922"
 OMEinsumContractionOrders = "6f22d1fd-8eed-4bb7-9776-e7d684900715"
 
-[compat]
-BenchmarkTools = "1.2"
-CUDA = "3.6"
-Comonicon = "0.11"
-MKL = "0.4"
-OMEinsum = "0.6"
-OMEinsumContractionOrders = "0.6"
+[extras]
+CUDA_Runtime_jll = "76a88914-d11a-5bdc-97e0-2f5a05c973a2"
